# rust-axum-sea-orm-clean-architecture

./: .dockerignore  .env.example  .gitignore  Cargo.toml  Dockerfile.dev  LICENSE  README.md  Taskfile.yml  compose.yaml
migration/: Cargo.toml
migration/src/: lib.rs  m20251119_070234_create_company_table.rs  m20251119_070643_create_department_table.rs
src/: config.rs
src/application/: error.rs  mod.rs  use_case.rs
src/application/cases/: mod.rs
src/application/cases/auth/: sign_in.rs
src/application/cases/company/: add_company.rs  mod.rs  query_company.rs
src/application/cases/department/: add_department.rs  mod.rs
src/application/dtos/auth/: mod.rs  sign_in.rs
src/application/dtos/company/: add_company.rs  mod.rs  query_company.rs
src/application/dtos/department/: add_department.rs  mod.rs
src/cmd/: main.rs
src/domain/: error.rs  mod.rs
src/domain/organization/repositories/: company_repo.rs  mod.rs  (+1 more)
src/infrastructure/: mod.rs
src/infrastructure/db/: context.rs  init.rs  mod.rs  provider.rs  repository.rs
src/infrastructure/helpers/: token.rs
src/infrastructure/implements/: company_repo_impl.rs  department_repo_impl.rs  mod.rs
src/presentation/: handlers.rs  mod.rs  response.rs  trace.rs
src/presentation/guards/: auth_guard.rs  mod.rs  role_guard.rs
src/presentation/http/: mod.rs  server.rs  state.rs
src/presentation/middlewares/: validator.rs
tests/: mod.rs
tests/application/: mod.rs
tests/infrastructure/: mod.rs
tests/infrastructure/helpers/: token.rs
tests/infrastructure/implements/: company_repo_impl.rs  mod.rs
(+7 files in other folders)
