[package]
name = "rust-rest-skeleton"
version = "0.1.0"
edition = "2024"

[workspace]
members = [".", "migration"]

[lib]
name = "lib"
path = "src/lib.rs"

[[bin]]
name = "rest_app"
path = "src/cmd/main.rs"

[dependencies]
migration = { path = "migration" }

dotenv = "0.15.0"
tokio = { version = "1.48.0", features = ["full", "macros", "rt-multi-thread"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.20" }
anyhow = "1.0.100"
opentelemetry-stdout = "0.31.0"
opentelemetry = "0.31.0"
opentelemetry_sdk = "0.31.0"
tracing-opentelemetry = "0.32.0"
thiserror = "2.0.17"
tower-layer = "0.3.3"
tower-http = { version = "0.6.6", features = ["trace"] }
serde = { version = "1.0.228", features = ["derive", "std"] }
futures-core = "0.3.31"
uuid = { version = "1.18.1", features = ["fast-rng", "serde", "v4"] }
validator = { version = "0.20.0", features = ["derive"] }
axum = "0.8.7"
sea-orm = { version = "1.1.19", features = ["sqlx-postgres", "runtime-tokio-native-tls", "with-chrono", "mock"] }
async-trait = "0.1.89"
chrono = { version = "0.4.42", features = ["serde"] }
tower-service = "0.3.3"
jsonwebtoken = { version = "10.2.0", features = ["aws_lc_rs"] }
